[MacDev] Moved AppleSdkAboutInformation to separate file
Conflicts:

	main/src/addins/MonoDevelop.MacDev/AppleSdkSettings.cs
	main/src/addins/MonoDevelop.MacDev/Makefile.am
	main/src/addins/MonoDevelop.MacDev/MonoDevelop.MacDev.csproj

--- a/main/src/addins/MonoDevelop.MacDev/MonoDevelop.MacDev.csproj
+++ b/main/src/addins/MonoDevelop.MacDev/MonoDevelop.MacDev.csproj
@@ -132,6 +132,7 @@
     <Compile Include="BindingProject\ObjcBindingProjectConfiguration.cs" />
     <Compile Include="MacKeychainPasswordProvider.cs" />
     <Compile Include="MonoDevelop.MacDev.PlistEditor\StringListWidget.cs" />
+    <Compile Include="AppleSdkAboutInformation.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MonoDevelop.MacDev.addin.xml">
