[Build] Robustify the copying of the ngit/cecil binaries
Explicitly list the assemblies we require and copy them to the build
directory. This robustifies us against junk left behind by running
the ngit tests and also prevents us from accidentally copying test
assemblies if they are built.

--- a/main/external/Makefile.am
+++ b/main/external/Makefile.am
@@ -2,27 +2,33 @@ TARBALL_PATH=../../tarballs/external
 
 NGIT_SLN=ngit/ngit.sln
 NGIT=$(NGIT_SLN) /t:NGit
+NGIT_OUTPUT = ngit/bin/
+NGIT_ASSEMBLIES = $(addprefix $(NGIT_OUTPUT), NGit.dll NSch.dll Sharpen.dll)
+NGIT_BINARIES = $(NGIT_ASSEMBLIES) $(addsuffix .mdb, $(NGIT_ASSEMBLIES))
 
 CECIL_SLN=cecil/Mono.Cecil.sln
 CECIL=/property:Configuration=net_4_0_Debug $(CECIL_SLN)
-CECIL_OUTPUT=cecil/bin/net_4_0_Debug
+CECIL_OUTPUT=cecil/bin/net_4_0_Debug/
+CECIL_ASSEMBLIES = $(addprefix $(CECIL_OUTPUT), Mono.Cecil.dll Mono.Cecil.Mdb.dll)
+CECIL_BINARIES = $(CECIL_ASSEMBLIES) $(addsuffix .mdb, $(CECIL_ASSEMBLIES))
 
-OUTPUT=../build/bin
+BINARIES = $(CECIL_BINARIES) $(NGIT_BINARIES)
+OUTPUT=$(top_builddir)/build/bin
 
 all:
 	mkdir -p $(OUTPUT)
 	xbuild $(NGIT)
-	cp ngit/bin/* $(OUTPUT)
 	xbuild $(CECIL)
-	cp $(CECIL_OUTPUT)/Mono.Cecil.dll $(OUTPUT)
-	cp $(CECIL_OUTPUT)/Mono.Cecil.dll.mdb $(OUTPUT)
-	cp $(CECIL_OUTPUT)/Mono.Cecil.Mdb.dll $(OUTPUT)
-	cp $(CECIL_OUTPUT)/Mono.Cecil.Mdb.dll.mdb $(OUTPUT)
+	for binary in $(BINARIES); do \
+		cp $$binary $(OUTPUT)/; \
+	done
 
 clean:
 	@if test -f $(NGIT_SLN); then xbuild $(NGIT) /t:Clean; fi
 	@if test -f $(CECIL_SLN); then xbuild $(CECIL) /t:Clean; fi
-
+	for binary in $(BINARIES); do \
+		rm -f $(OUTPUT)/`basename $$binary`; \
+	done
 install:
 
 uninstall:
