--- a/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
+++ b/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
@@ -154,7 +154,6 @@
     <Compile Include="Mono.TextEditor\Gui\CodeSegmentPreviewWindow.cs" />
     <Compile Include="Mono.TextEditor\Gui\DashedLineMargin.cs" />
     <Compile Include="Mono.TextEditor\Actions\DeleteActions.cs" />
-    <Compile Include="Mono.TextEditor\Gui\FoldMarkerMargin.cs" />
     <Compile Include="Mono.TextEditor\Gui\FoldingScreenbackgroundRenderer.cs" />
     <Compile Include="Mono.TextEditor\Gui\GtkWorkarounds.cs" />
     <Compile Include="Mono.TextEditor\Gui\GutterMargin.cs" />
@@ -206,6 +205,8 @@
     <Compile Include="Mono.TextEditor\Gui\TooltipProvider.cs" />
     <Compile Include="Mono.TextEditor\ISelectionSurroundingProvider.cs" />
     <Compile Include="Mono.TextEditor\Gui\Blur.cs" />
+    <Compile Include="Mono.TextEditor\Gui\SolidFoldMarkerMargin.cs" />
+    <Compile Include="Mono.TextEditor\Gui\FoldMarkerMargin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Mono.TextEditor.dll.config">
