Some initial work to prevent direct access to view content objects
In RefactoringPreviewDialog, removed resizing of the window to avoid
direct access to the view object.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1713,6 +1713,7 @@
     <Compile Include="MonoDevelop.Ide\DefaultWebCertificateProvider.cs" />
     <Compile Include="MonoDevelop.Ide.TypeSystem\ParsedFileEventArgs.cs" />
     <Compile Include="MonoDevelop.Ide.Extensions\MimeTypeExtensionNode.cs" />
+    <Compile Include="MonoDevelop.Ide.Gui\DocumentView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
