[Ide] Added new custom paned widget
It allows using a 1-pixel width handle, and also using
a custom widget as a handle.

--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1714,6 +1714,8 @@
     <Compile Include="MonoDevelop.Ide.TypeSystem\ParsedFileEventArgs.cs" />
     <Compile Include="MonoDevelop.Ide.Extensions\MimeTypeExtensionNode.cs" />
     <Compile Include="MonoDevelop.Ide.Gui\DocumentView.cs" />
+    <Compile Include="MonoDevelop.Components\VPanedThin.cs" />
+    <Compile Include="MonoDevelop.Components\HPanedThin.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
