Added XWT and Json.NET
This allows addins to reference them without bringing in their own
copies, and means that MD can initialize the XWT GTK backend.

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,9 @@
 [submodule "main/external/mdtestharness"]
 	path = main/external/mdtestharness
 	url = git://github.com/alanmcgovern/mdtestharness.git
+[submodule "main/external/xwt"]
+	path = main/external/xwt
+	url = git://github.com/mono/xwt.git
+[submodule "main/external/Newtonsoft.Json"]
+	path = main/external/Newtonsoft.Json
+	url = git://github.com/mono/Newtonsoft.Json.git
