[AspNet Mvc] Razor syntax highlighter

--- a/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
+++ b/main/src/addins/AspNet/MonoDevelop.AspNet.Mvc/MonoDevelop.AspNet.Mvc.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Parser\RazorPageInfo.cs" />
     <Compile Include="Parser\RazorSymbols.cs" />
     <Compile Include="Parser\RazorUtils.cs" />
+    <Compile Include="RazorSyntaxMode.cs" />
     <Compile Include="StateEngine\RazorCodeBlockState.cs" />
     <Compile Include="StateEngine\RazorCodeFragmentState.cs" />
     <Compile Include="StateEngine\RazorCommentState.cs" />
