--- a/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
+++ b/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
@@ -318,6 +318,9 @@
     <EmbeddedResource Include="Styles\SolarizedDarkStyle.xml">
       <LogicalName>SolarizedDarkStyle.xml</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="SyntaxModes\RazorSyntaxMode.xml">
+      <LogicalName>RazorSyntaxMode.xml</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
