--- a/main/src/addins/CSharpBinding/CSharpBinding.csproj
+++ b/main/src/addins/CSharpBinding/CSharpBinding.csproj
@@ -295,6 +295,7 @@
     <Compile Include="MonoDevelop.CSharp\AstStockIcons.cs" />
     <Compile Include="MonoDevelop.CSharp.Completion\AbstractParameterDataProvider.cs" />
     <Compile Include="MonoDevelop.CSharp.Highlighting\CSharpSelectionSurroundingProvider.cs" />
+    <Compile Include="MonoDevelop.CSharp\SignatureMarkupCreator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
