Added AssemblyInfo file template for gtk project, rewrited C# code to F#

--- a/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.fsproj
+++ b/MonoDevelop.FSharpBinding/MonoDevelop.FSharp.fsproj
@@ -57,6 +57,7 @@
     <EmbeddedResource Include="templates\FSharpLibraryProject.xpt.xml" />
     <EmbeddedResource Include="templates\FSharpTutorialProject.xpt.xml" />
     <EmbeddedResource Include="templates\FSharpGtkProject.xpt.xml" />
+    <EmbeddedResource Include="templates\AssemblyInfo.xft.xml" />
     <!--<EmbeddedResource Include="templates\FSharpMoonlightLibraryProject.xpt.xml" /> -->
     <EmbeddedResource Include="FSharpBinding.addin.xml" />
     <Compile Include="PowerPack\CodeDomVisitor.fs" />
