--- a/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
+++ b/main/src/core/MonoDevelop.Ide/MonoDevelop.Ide.csproj
@@ -1428,7 +1428,6 @@
     <Compile Include="MonoDevelop.Ide.WebBrowser\LocationChangingEventArgs.cs" />
     <Compile Include="MonoDevelop.Ide.WebBrowser\IWebBrowserLoader.cs" />
     <Compile Include="MonoDevelop.Ide.CodeCompletion\CompletionListWindow.cs" />
-    <Compile Include="MonoDevelop.Ide.CodeCompletion\DeclarationViewWindow.cs" />
     <Compile Include="MonoDevelop.Ide.CodeCompletion\ICompletionWidget.cs" />
     <Compile Include="MonoDevelop.Ide.CodeCompletion\ListWindow.cs" />
     <Compile Include="MonoDevelop.Ide.CodeCompletion\ParameterInformationWindowManager.cs" />
@@ -1731,6 +1730,7 @@
     <Compile Include="MonoDevelop.Components.MainToolbar\CommandSearchCategory.cs" />
     <Compile Include="MonoDevelop.Components\ExtendedLabel.cs" />
     <Compile Include="MonoDevelop.Ide.CodeCompletion\TooltipInformation.cs" />
+    <Compile Include="MonoDevelop.Ide.CodeCompletion\TooltipInformationWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Makefile.am" />
