--- a/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
+++ b/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
@@ -203,6 +203,7 @@
     <Compile Include="Mono.TextEditor\ISelectionSurroundingProvider.cs" />
     <Compile Include="Mono.TextEditor\Gui\TextEditor.cs" />
     <Compile Include="Mono.TextEditor\TextLineMarker.cs" />
+    <Compile Include="Mono.TextEditor\TextSegmentMarker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Mono.TextEditor.dll.config">
